# maiven

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.cargo/: config.toml
model-api/: Cargo.toml
model-api/src/: chat.rs  errors.rs  items.rs  main.rs  models.rs  sources.rs  tracing_config.rs
scripts/: bootstrap_db.sh
search-store/: Cargo.toml
search-store/migrations/: 20230523052312_init.down.sql  20230523052312_init.up.sql  20230523053657_initial_models.down.sql  20230523053657_initial_models.up.sql
search-store/src/: db.rs  lib.rs
search-store/src/db/: chat_sessions.rs  items.rs  models.rs
search-store/src/models/: bi_encoder.rs  chat.rs  completion.rs  download.rs  error.rs  ggml.rs  huggingface.rs  mod.rs  rust_bert_sentence_embeddings.rs  transformers.rs
search-store/src/models/chat/: ggml_chat.rs
search-store/src/models/completion/: ggml_completion.rs
search-store/src/models/download/: huggingface.rs
storage/: README.md
web/: .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.html  theme.postcss
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
