[project]
name = "maiven"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Daniel Imfeld", email = "daniel@imfeld.dev" }
]
dependencies = ["torch==2.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
