[package]
name = "model-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
maiven-search-store = { path = "../search-store" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full", "tracing"] }

