[package]
name = "model-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
dotenvy = "0.15.7"
error-stack = { version = "0.3.1", features = ["spantrace"] }
log = "0.4.17"
maiven-search-store = { path = "../search-store" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "json", "runtime-tokio-native-tls", "time"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.3"

