[package]
name = "maiven-search-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
error-stack = "0.3.1"
hnsw_rs = { version = "0.1.19", features = ["simdeez_f"] }
itertools = "0.10.5"
ndarray = "0.15.6"
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rayon = "1.7.0"
roaring = "0.10.1"
tantivy = "0.19.2"
tracing = "0.1.37"
