[package]
name = "maiven-search-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
error-stack = { version = "0.3.1", features = ["spantrace"] }
flume = "0.10.14"
itertools = "0.10.5"
ndarray = "0.15.6"
oneshot = "0.1.5"
parking_lot = "0.12.1"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking", "json", "gzip"] }
roaring = "0.10.1"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert/", branch = "master", features = ["download-libtorch"] }
rust_tokenizers = "8.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["time", "postgres", "runtime-tokio-native-tls", "uuid", "json"] }
tantivy = "0.19.2"
tch = "0.13.0"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["tracing", "full"] }
tracing = "0.1.37"

[dependencies.llm]
git = "https://github.com/rustformers/llm"
branch = "main"

[features]
# Run tests that download files on every run
test-download = []

[dev-dependencies]
dotenvy = "0.15.7"
